flux/apps/scrutiny/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: scrutiny-influxdb
  namespace: extra-tools
spec:
  type: ClusterIP
  selector:
    app: scrutiny-influxdb
  ports:
  - name: scrutiny-influxdb
    port: 8086
    targetPort: 8086
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: scrutiny-web
  namespace: extra-tools
spec:
  type: ClusterIP
  selector:
    app: scrutiny-web
  ports:
  - name: scrutiny-web
    port: 8080
    targetPort: 8080
    protocol: TCP
